# Flowwright

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: health.py  media.py  workflows.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/data/: README.md
apps/api/app/models/: __init__.py  test_result.py  workflow.py
apps/api/app/services/: __init__.py  clarifications.py  code_generator.py  compile_readiness.py  demo_analyzer.py  evidence_processor.py  invoice_compiler.py  invoice_interpreter.py  invoice_runtime.py  invoice_workflow_normalizer.py  keyframe_extractor.py  openai_analyzer.py  workflow_analyzer.py  workflow_reference_normalizer.py  workflow_tester.py  workflow_validation.py
apps/api/tests/: conftest.py  test_compiler_pipeline.py  test_demo_workflow.py  test_health.py  test_keyframes.py  test_media.py  test_openai_analyzer_normalize.py  test_security_and_fingerprint.py  test_semantic_role_compiler.py  test_transcription.py  test_workflow_reference_normalizer.py  test_workflow_schema.py  test_workflow_validation.py
data_invoice/: approval_queue.html  invoice_INV-1042.html  purchase_orders.csv  purchase_orders.html
docs/: app.js  index.html  styles.css
scripts/: export_workflow_schema.py  verify_setup.py
(+82 files in other folders)
